# notifyd

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac.in
common/: Makefile.am  expidus-notify-log.c  expidus-notify-log.h
expidus1-notifyd/: expidus-notify-daemon.c  expidus-notify-daemon.h  expidus-notify-window.c  expidus-notify-window.h  expidus1-notifyd.desktop.in  expidus1-notifyd.service.in  main.c  notify-dbus.xml  org.expidus.expidus1-notifyd.Notifications.service.in
expidus1-notifyd-config/: expidus1-notifyd-config.1  expidus1-notifyd-config.desktop.in  expidus1-notifyd-config.glade  main.c
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  notification-plugin-dialogs.c  notification-plugin-dialogs.h  notification-plugin-log.c  notification-plugin-log.h  notification-plugin.c  notification-plugin.desktop.in  notification-plugin.h
po/: POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  (+16 more)
tests/: dummy-notification.sh  test-actions.c  test-icons.c  test-positioning.c  test-text.c
themes/gtk-3.0/Bright/: gtk.css
themes/gtk-3.0/Default/: gtk.css
themes/gtk-3.0/Retro/: gtk.css
themes/gtk-3.0/Smoke/: gtk.css
themes/gtk-3.0/ZOMG-PONIES!/: gtk.css
themes/gtk-3.20/Bright/: gtk.css
themes/gtk-3.20/Default/: gtk.css
themes/gtk-3.20/Retro/: gtk.css
themes/gtk-3.20/Smoke/: gtk.css
themes/gtk-3.20/ZOMG-PONIES!/: gtk.css
